Changed the places for the videos

--- a/ReactNativeExoPlayer/build.gradle
+++ b/ReactNativeExoPlayer/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.facebook.react:react-native:0.71.0-rc.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.3'
 
 }
